--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "forkify-project",
   "version": "1.0.0",
   "description": "Recipe application",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Balac",
   "license": "ISC",
